# td-2019-mapviewer-ext

./: .gitignore  Dockerfile  README.md  bookmarks.sqlite  start-docker-env.bash  update-mvo-ext.bash  update-mvo.bash  workshop.pptx
mapviewer.ext/: CMakeLists.txt  mapviewer.ext.bookmarks.pluginspec  mapviewer.extension.td2019.pluginspec  resources.qrc
mapviewer.ext/src/: extension.cpp  extension.h  extensionfactory.cpp  extensionfactory.h  plugin.cpp  plugin.h  td2019extension.cpp  td2019extension.h  td2019extensionfactory.cpp  td2019extensionfactory.h  td2019plugin.cpp  td2019plugin.h
mvo-cfg/: mapviewerserver.json  sessionserver.ini
